<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<LinearLayout
	  android:orientation="horizontal"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_weight="1">
		<LinearLayout
			android:orientation="vertical"
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			>
			<ImageButton
			  android:id="@+id/new_order_button"
				android:src="@layout/new_order_home_button"
				android:background="@color/white"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/new_order"
				android:textSize="@dimen/small_text"
        android:textColor="@color/black"
        android:textStyle="bold"
				/>
    </LinearLayout>
		<LinearLayout
		  android:orientation="vertical"
		  android:layout_height="fill_parent"
		  android:layout_width="wrap_content"
		  android:layout_weight="1"
		  android:gravity="center"
		  >
		  <ImageButton
		    android:id="@+id/recent_pizzas_button"
		   	android:src="@layout/recent_pizzas_home_button"
		   	android:background="@color/white"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
		   	android:gravity="center"
		   	/>
      <TextView
		   	android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:text="@string/recent_pizzas"
		   	android:textSize="@dimen/small_text"
		   	android:textColor="@color/black"
        android:textStyle="bold"
		   	/>
	  </LinearLayout>
   </LinearLayout>

	<LinearLayout
	  android:orientation="horizontal"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_weight="1" >
		<LinearLayout
			android:orientation="vertical"
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			>
			<ImageButton
			  android:id="@+id/recent_orders_button"
				android:src="@layout/recent_orders_home_button"
				android:background="@color/white"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
       <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recent_orders"
				android:textSize="@dimen/small_text"
				android:textColor="@color/black"
        android:textStyle="bold"
				/>
     </LinearLayout>
		<LinearLayout
		  android:orientation="vertical"
		  android:layout_height="fill_parent"
		  android:layout_width="wrap_content"
		  android:layout_weight="1"
		  android:gravity="center"
		  >
			<ImageButton
			  android:id="@+id/info_button"
				android:src="@layout/info_button"
				android:background="@color/white"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/info"
				android:textSize="@dimen/small_text"
				android:textColor="@color/black"
        android:textStyle="bold"
				/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>